# haskell-game

./: CHANGELOG.md  Character.hs  Config.hs  Draw.hs  Item.hs  LICENSE  Main.hs  Mapping.hs  Messages.hs  Move-Logik.xml  Movement.hs  README.md  compile.sh  game  haskell-game.cabal  install.sh  main.hs  outline.txt  random.hs  settings.cfg
