cabal-version:       >=1.10
name:                haskell-game
version:             1.2.2
synopsis:            A little nameless game.
-- description:
homepage:            https://www.eklaesener.de/haskell/game
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Elias Klaesener
maintainer:          haskell-game@eklaesener.de
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable haskell-game
  main-is:             Main.hs
  other-modules: Character, Config, Draw, Item, Messages, Movement
  -- other-extensions:
  build-depends:       base >=4.12, mtl >=2.2, directory >=1.3, array >=0.5, unix >=2.7, MonadRandom >=0.5.1.1, random >=1.1, ConfigFile >=1.1.4, unordered-containers >=0.2.10.0
  ghc-options: -Wall
  -- hs-source-dirs:
  default-language:    Haskell2010
